Fixed social icons spacing issue

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,7 +8,7 @@
     background-position: 0 -8px;
     display: inline-block;
     height: 25px;
-    width: 213px;
+    width: 107px;
     text-indent: -9999em;
   }
 }
